--- a/gulp/app/scss/_barcelona.scss
+++ b/gulp/app/scss/_barcelona.scss
@@ -1,7 +1,7 @@
-.athens {
+.barcelona {
 
   &-banners {
-    background-image: url(../img/athens.jpg);
+    background-image: url(../img/start-barcelona.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
