--- a/gulp/app/scss/barcelona-style.scss
+++ b/gulp/app/scss/barcelona-style.scss
@@ -9,7 +9,7 @@
 @import "sponsor-card";
 @import "menu-nav";
 @import "directions-substrate";
-@import "athens";
+@import "barcelona";
 @import "start";
 
 @import "media";
